--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
+    "caniuse-lite": "^1.0.30001507",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
